@@ -28,7 +28,7 @@ if ( !@{ $dbh->selectall_arrayref('show databases like "sakila"') } ) {
    plan skip_all => "Sakila database is not loaded";
 }
 else {
-   plan tests => 2;
+   plan tests => 12;
 }
 
 my $cnf     = '/tmp/12345/my.sandbox.cnf';
@@ -39,7 +39,10 @@ my $output;
 $sb->wipe_clean($dbh);
 
 mk_index_usage::main(@args, "$trunk/common/t/samples/empty",
-   "--create-save-results-database", "--no-report");
+   qw(--empty-save-results --create-save-results-database --no-report),
+   '-t', 'sakila.actor,sakila.address');
+
+$dbh->do("use mk");
 
 my $rows = $dbh->selectcol_arrayref("show databases");
 my $ok   = grep { $_ eq "mk" } @$rows;
@@ -53,6 +56,130 @@ is_deeply(
    $rows,
    [qw(index_alternatives index_usage indexes queries tables)],
    "Create tables"
+);
+
+$rows = $dbh->selectall_arrayref("select * from mk.tables order by db, tbl");
+is_deeply(
+   $rows,
+   [
+      [qw( sakila actor         0 )],
+      [qw( sakila address       0 )],
+   ],
+   "Populate tables table (filtered)"
+);
+
+
+$rows = $dbh->selectall_arrayref("select * from mk.indexes order by db, tbl");
+is_deeply(
+   $rows,
+   [
+      [qw(sakila  actor   idx_actor_last_name 0)],
+      [qw(sakila  actor   PRIMARY             0)],
+      [qw(sakila  address idx_fk_city_id      0)],
+      [qw(sakila  address PRIMARY             0)],
+   ],
+   "Populate indexes table (filtered)"
+);
+
+$rows = $dbh->selectall_arrayref("select * from mk.queries");
+is_deeply(
+   $rows,
+   [],
+   "No queries yet"
+);
+
+$rows = $dbh->selectall_arrayref("select * from mk.index_usage");
+is_deeply(
+   $rows,
+   [],
+   "No index usage counts yet"
+);
+
+$rows = $dbh->selectall_arrayref("select * from mk.index_alternatives");
+is_deeply(
+   $rows,
+   [],
+   "No index alternatives yet"
+);
+
+# Now for the real test.
+mk_index_usage::main(@args, "$trunk/mk-index-usage/t/samples/slow007.txt",
+   qw(--empty-save-results --no-report), '-t', 'sakila.actor,sakila.address');
+
+$rows = $dbh->selectall_arrayref("select * from mk.tables order by db, tbl");
+is_deeply(
+   $rows,
+   [
+      [qw( sakila actor         4 )],
+      [qw( sakila address       0 )],
+   ],
+   "Table access counts"
+);
+
+$rows = $dbh->selectall_arrayref("select * from mk.indexes order by db, tbl");
+is_deeply(
+   $rows,
+   [
+      [qw(sakila  actor   idx_actor_last_name 1)],
+      [qw(sakila  actor   PRIMARY             3)],
+      [qw(sakila  address idx_fk_city_id      0)],
+      [qw(sakila  address PRIMARY             0)],
+   ],
+   "Index usage counts"
+);
+
+$rows = $dbh->selectall_arrayref("select * from mk.queries order by query_id");
+is_deeply(
+   $rows,
+   [
+      [  4950186562421969363,
+         "select * from sakila.actor where last_name like ?",
+         "select * from sakila.actor where last_name like 'A%'",
+      ],
+      [  10334408417593890092,
+         "select * from sakila.actor where last_name like ? order by actor_id",
+         "select * from sakila.actor where last_name like 'A%' order by actor_id",
+      ],
+      [  10891801448710051322,
+         "select * from sakila.actor where actor_id>?",
+         "select * from sakila.actor where actor_id>10",
+      ],
+   ],
+   "Queries added"
+);
+
+$rows = $dbh->selectall_arrayref("select query_id, db, tbl, idx, sample from index_usage iu left join queries q using (query_id) order by db, tbl, idx");
+is_deeply(
+   $rows,
+   [
+      [
+         4950186562421969363,
+         qw(sakila  actor  idx_actor_last_name),
+         "select * from sakila.actor where last_name like 'A%'",
+      ], 
+      [
+         10891801448710051322,
+         qw(sakila  actor  PRIMARY),
+         "select * from sakila.actor where actor_id>10",
+      ],
+      [
+         10334408417593890092,
+         qw(sakila  actor  PRIMARY),
+         "select * from sakila.actor where last_name like 'A%' order by actor_id",
+      ],
+   ],
+   "Index usage",
+);
+
+$rows = $dbh->selectall_arrayref("select db,tbl,idx,alt_idx,sample from index_alternatives a left join queries q using (query_id)");
+is_deeply(
+   $rows,
+   [
+      [  qw(sakila actor PRIMARY idx_actor_last_name),
+         "select * from sakila.actor where last_name like 'A%' order by actor_id",
+      ], 
+   ],
+   "Index alternatives"
 );
 
 # #############################################################################
